--- a/marks.html
+++ b/marks.html
@@ -1,10 +1,15 @@
 <html>
 <head>
 <title>Marks</title>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
 </head>
 <body>
 <h1>MARKS</h1>
-<table style="width=300%">
+<table style="width=100">
 	<tr>
 	<th>Subject name</th>
 	<th>Akhil</th>
