link for registration page

--- a/course.html
+++ b/course.html
@@ -16,5 +16,7 @@
 		<li>XAAS</li>
 		</ul>
 </ol>
+<h2><a href="ps://github.com/dhanunjayraju/RDIP/commit/acc05d2ab6ce755a545e75bc6ba764832042c820">click link to register</a></h2>
 </body>
 </html>	
+
